<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/status"
        android:title="@string/status"
        android:icon="@drawable/ic_menu_connection" 
       	>
        
        <menu>
            <item android:id="@+id/available"
                  android:title="@string/available"  />
            <item android:id="@+id/occupied"
                  android:title="@string/occupied" 
                  android:icon="@drawable/ic_menu_stoccupied"/>
            <item android:id="@+id/logout"
                  android:title="@string/logout" 
				/>
        </menu>
        
    </item>

    
    <item
        android:id="@+id/logoutMenu"
        android:title="@string/logout"
        android:icon="@drawable/ic_menu_logout" />


</menu>