<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffffff">
 
        <!--  Header Starts-->
        <LinearLayout android:id="@+id/header"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@layout/header_gradient"
		    android:paddingTop="5dip"
		    android:paddingBottom="5dip"
		    android:orientation="vertical">
        <!-- Logo Start-->
        	<ImageView android:src="@drawable/logo"
        	    android:contentDescription="@string/hello_world"
	            android:layout_width="fill_parent"
	            android:layout_height="80sp"
	            ></ImageView>
   
        <!-- Logo Ends -->
		</LinearLayout>
        <!--  Header Ends -->
 
        <!-- Footer Start 
                   
        <LinearLayout android:id="@+id/footer"
		    android:layout_width="fill_parent"
		    android:layout_height="90dip"
		    android:background="@layout/footer_repeat"
		    android:layout_alignParentBottom="true">
		</LinearLayout>-->
        <!-- Footer Ends -->
 
        <!-- Login Form -->
        <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dip"
          android:layout_below="@id/header">
          <!--  adjuster label -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/adjusterNumber"/>
          <EditText android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
                android:inputType="number"
                android:id="@+id/adjuster"/>
          <!--  phoneNumber Label -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/phoneNumbre"/>
          <EditText android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:inputType="number"
               	android:id="@+id/phnumber"/>
          <!-- Login button -->
          <Button android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/login"/> 
		</LinearLayout>
        <!-- Login Form Ends -->
 
  </RelativeLayout>
</ScrollView>